# embers

./: .gitignore  Cargo.toml  README.md
crates/embers-core/: Cargo.toml
crates/embers-core/src/: error.rs  gpu.rs  lib.rs  utils.rs
crates/embers-core/src/backend/: error.rs  executor.rs  gpu.rs  mod.rs  task_partition.rs
crates/embers-core/src/element/: mod.rs  wgsl.rs
crates/embers-core/src/file_formats/: mod.rs
crates/embers-core/src/kernel/: binding.rs  error.rs  fold.rs  mod.rs
crates/embers-core/src/kernel/map/: mod.rs
crates/embers-core/src/kernel_new/: error.rs
crates/embers-core/src/tensor/: buffer.rs  mod.rs  view.rs
crates/embers-core/templates/: fold.wgsl
crates/embers-core/templates/include/: parameters.wgsl  quants.wgsl
crates/embers-core/tests/: cast.rs  fold.rs  map.rs  rand.rs
crates/embers-core/tests_disabled/common/: mod.rs
crates/embers-file/: Cargo.toml
crates/embers-file/src/: lib.rs
crates/embers-file/src/gguf/: metadata.rs  mod.rs  quants.rs
crates/embers-llama/: Cargo.toml
crates/embers-llama/src/: llama.rs  main.rs
crates/embers-transpile/: Cargo.toml
crates/embers-transpile-macros/: Cargo.toml
crates/embers-transpile-macros/src/: args.rs  closure.rs  error.rs  expression.rs  function.rs  functions.rs  global.rs  helpers.rs  item.rs  lib.rs  module.rs  struct.rs  structs.rs  trait.rs  traits.rs  utils.rs
crates/embers-transpile/src/: __private.rs  builder.rs  callable.rs  lib.rs  utils.rs
crates/embers-transpile/src/builder/: block.rs  closure.rs  error.rs  expression.rs  function.rs  literal.rs  mod.rs  module.rs  pointer.rs  struct.rs  type.rs  variable.rs
crates/embers-transpile/src/shader_std/: default.rs  marker.rs  mod.rs  ops.rs  option.rs  prelude.rs  ptr.rs  types.rs
crates/embers-transpile/src/shader_std/types/: array.rs  atomic.rs  mod.rs  primitive.rs  scalar.rs  vec.rs
crates/embers-transpile/tests/: structs.rs  vec.rs
crates/embers-transpile/tests/utils/: mod.rs
crates/naga-test/: Cargo.toml
crates/naga-test/src/: main.rs  mock.rs  scratch.rs
embers/: Cargo.toml  askama.toml
embers-llama/: Cargo.toml
embers-llama/src/: llama.rs  main.rs
embers-ricsl/: Cargo.toml
embers-ricsl-macros/: Cargo.toml
embers-ricsl-macros/src/: args.rs  codegen.rs  error.rs  functions.rs  lib.rs  structs.rs  traits.rs  utils.rs
embers-ricsl/src/: __private.rs  arena.rs  builder.rs  example.rs  lib.rs  types.rs
embers-ricsl/src/rstd/: mod.rs  ops.rs  types.rs
embers/src/: lib.rs
embers/src/file_formats/gguf/: metadata.rs  mod.rs  quants.rs
embers/src/tensor/: builder.rs
embers/templates/include/: bindings.wgsl  common.wgsl
embers/tests/: cast.rs  fold.rs  map.rs  rand.rs
embers/tests/common/: mod.rs
naga-test/: Cargo.toml
naga-test/src/: main.rs
wgpu-llama/: Cargo.toml
wgpu-llama/src/: llama.rs  main.rs
wgpu-tensors/: Cargo.toml
wgpu-tensors-test/: Cargo.toml
wgpu-tensors-test/src/: main.rs
wgpu-tensors/src/: element.rs  error.rs  gpu.rs  lib.rs  utils.rs
wgpu-tensors/src/element/: block.rs  mod.rs  primitive.rs
wgpu-tensors/src/file_formats/: gguf.rs  mod.rs
wgpu-tensors/src/file_formats/gguf/: metadata.rs  mod.rs  quants.rs
wgpu-tensors/src/kernel/: binary.rs  binding.rs  cast.rs  executor.rs  fold.rs  map.rs  mod.rs  rand.rs  reduce.rs  trinary.rs  unary.rs
wgpu-tensors/src/kernel/map/: binary.rs  cast.rs  mod.rs  ternary.rs  unary.rs
wgpu-tensors/src/tensor/: buffer.rs  builder.rs  mod.rs  shape.rs  strider.rs  view.rs
wgpu-tensors/templates/: common.wgsl  common_old.wgsl  fold.wgsl  kernel.wgsl  kernel_reduce.wgsl  map.wgsl  rand.wgsl  reduce.wgsl
wgpu-tensors/templates/include/: prng.wgsl
wgpu-tensors/tests/: cast.rs  fold.rs  map.rs  rand.rs
wgpu-tensors/tests/common/: mod.rs
