[package]
name = "embers-ricsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1"
naga = "0.14"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.8"
half = { version = "2.3", optional = true }

[dependencies.embers-ricsl-macros]
version = "0.1.0"
path = "../embers-ricsl-macros"
optional = true

[features]
macros = ["dep:embers-ricsl-macros"]
