[package]
name = "naga-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.14", features = ["wgsl-in", "serialize", "compact"] }
wgpu = "0.16"
postcard = { version = "1.0", features = ["use-std"] }
serde = "1.0"
pretty-hex = "0.3"
similar = "2.3"
owo-colors = "3.5"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
color-eyre = "0.6"

[dependencies.embers-ricsl]
version = "0.1.0"
path = "../embers-ricsl"
