[package]
name = "wgpu-tensors"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "Tensors with wgpu"
repository = "https://github.com/jgraef/wgpu-tensors"
# todo: add this once it's on docs.rs
# documentation = ""
categories = ["science"]
readme = "../README.md"
license = "MIT"

[dependencies]
tracing = "0.1"
thiserror = "1"
wgpu = "0.18"
wgpu-async = "0.18"
bytemuck = "1"
askama = "0.12"
async-lock = "3"
ouroboros = "0.18"
itertools = "0.11"
concat-idents = "1"
derivative = "2"
half = { version = "2", features = ["bytemuck"] }
futures-lite = "2"
byteorder = "1"
num = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
serde = { version = "1", features = ["derive"] }
int-enum = { version = "0.5", features = ["convert", "serde"] }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "sync"] }
