[package]
name = "embers-core"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "Tensors with wgpu"
repository = "https://github.com/jgraef/embers"
# todo: add this once it's on docs.rs
# documentation = ""
categories = ["science"]
readme = "../README.md"
license = "MIT"

[dependencies]
tracing = "0.1"
thiserror = "1"
wgpu = { version = "0.19", features = ["naga-ir"] }
wgpu-async = "0.19"
bytemuck = "1"
askama = "0.12"
async-lock = "3"
ouroboros = "0.18"
itertools = "0.12"
concat-idents = "1"
derivative = "2"
half = { version = "2", features = ["bytemuck"] }
num = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
arrayvec = "0.7"
naga = "0.19"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "sync"] }
