[package]
name = "embers-file"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
futures = "0.3"
int-enum = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
half = { version = "2", features = ["bytemuck"] }
tracing = "0.1"
bytemuck = "1"

[dependencies.embers-core]
path = "../embers-core"
