[package]
name = "embers-transpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1"
naga = "0.19"
half = { version = "2.3", optional = true }

[dependencies.embers-transpile-macros]
version = "0.1.0"
path = "../embers-transpile-macros"

[dev-dependencies]
naga = { version = "0.19", features = ["wgsl-in"] }
