[package]
name = "naga-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.19", features = ["wgsl-in", "wgsl-out", "serialize", "compact"] }
wgpu = "0.19"
postcard = { version = "1.0", features = ["use-std"] }
serde = "1.0"
pretty-hex = "0.4"
similar = "2.3"
owo-colors = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
color-eyre = "0.6"
termion = "3.0.0"
textwrap = "0.16.1"
itertools = "0.12.1"

[dependencies.embers-transpile]
version = "0.1.0"
path = "../embers-transpile"
